--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -3,6 +3,7 @@ html, body {
     height: 100%;
     margin: 0;
     background-color: #EEE;
+    font-family: "Roboto", sans-serif;
     touch-action: manipulation;
 }
 
